tests/semantic/valid/75_i8_attr_infer_chain.hulk
type C {
    a = 1;
    b = a + 1;
}

let c = new C() in print(c.b);
