tests/semantic/invalid/51_t_concat_bad_operand.hulk
type A() {}
let a = new A() in {
    let s = "hello" @ a in print(s);
};
